@@ -1,3 +1,8 @@
+2009-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/generic.cpp (OBUnitCell::FillUnitCell): Update with code
+	from Avogadro. Now should handle duplicate atoms.
+
 2009-05-04  Michael Banck  <mbanck@gmx.net>
 
 	* src/formats/moldenformat.cpp (ReadMolecule): Read in atom
